--- a/public/2026Regulations.html
+++ b/public/2026Regulations.html
@@ -3,6 +3,7 @@
  <link rel="stylesheet" href="../public/indexStyleSheet.css">
  <link rel="stylesheet" href="../public/GeneralStyle.css">
  <link rel="stylesheet" href="../public/2026RegulationsStyleSheet.css">
+ <link rel="stylesheet" href="public\indexStyleSheet.css">
 
     <head>
         <meta charset="UTF-8">
