--- a/public/F1Quiz.html
+++ b/public/F1Quiz.html
@@ -5,6 +5,7 @@
 <head>
  <link rel="stylesheet" href="../public/GeneralStyle.css">
  <link rel="stylesheet" href="../public/QuizStyle.css">
+ <link rel="stylesheet" href="public\indexStyleSheet.css">
 
     
         <meta charset="UTF-8">
@@ -50,6 +51,32 @@
 
 </div>
     </header>
+    <section class="cards-grid" aria-label="Quick links">
+
+                <a class="card" href="./public/2026Regulations.html">
+                    <img src="../asset/F1 2026 car.jpg" alt="2026 Regulations" class="card-img">
+                    <p>2026 Regulations:</p>
+                    <p>-What changes are coming to F1 this year.</p>
+                </a>
+
+                <a class="card" href="./public/PartsofaFormulaOneCar.html">
+                    <img src="../asset/F1_Halo.jpeg" alt="Parts of an F1 car" class="card-img">
+                    <p>Parts of an F1 Car:</p>
+                    <p>-Main components that make it all happen.</p>
+                </a>
+
+                <a class="card" href="./public/WhatHappensinaRaceWeekend.html">
+                    <img src="../asset/FreePractice_3.jpeg" alt="Race Weekend" class="card-img">
+                    <p>Race Weekend:</p>
+                    <p>-How a race weekend is structured.</p>
+                </a>
+
+                 <a class="card" href="./public/F1Quiz.html">
+                    <img src="../asset/Qualifying_3.jpeg" alt="Teams" class="card-img">
+                    <p>Quiz</p>
+                    <p>-Test Your knowledge on F1 with our interactive quiz</p>
+                </a>
+            </section>
         </body>
 
     
