--- a/public/References.html
+++ b/public/References.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <link rel="stylesheet" href="../public/GeneralStyle.css">
  <link rel="stylesheet" href="../public/ReferencesStyleSheet.css">
+ <link rel="stylesheet" href="public\indexStyleSheet.css">
     <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,7 +72,36 @@
     <li>-F. (2024a, June 6). FIA unveils Formula 1 regulations for 2026 and beyond featuring more agile cars and active aerodynamics | Formula 1®. FIA Unveils Formula 1 Regulations for 2026 and Beyond Featuring More Agile Cars and Active Aerodynamics. https://www.formula1.com/en/latest/article/fia-unveils-formula-1-regulations-for-2026-and-beyond-featuring-more-agile.75qJiYOHXgeJqsVQtDr2UB
     </ul>
     <hr>
+
+    <section class="cards-grid" aria-label="Quick links">
+
+                <a class="card" href="./public/2026Regulations.html">
+                    <img src="../asset/F1 2026 car.jpg" alt="2026 Regulations" class="card-img">
+                    <p>2026 Regulations:</p>
+                    <p>-What changes are coming to F1 this year.</p>
+                </a>
+
+                <a class="card" href="./public/PartsofaFormulaOneCar.html">
+                    <img src="../asset/F1_Halo.jpeg" alt="Parts of an F1 car" class="card-img">
+                    <p>Parts of an F1 Car:</p>
+                    <p>-Main components that make it all happen.</p>
+                </a>
+
+                <a class="card" href="./public/WhatHappensinaRaceWeekend.html">
+                    <img src="../asset/FreePractice_3.jpeg" alt="Race Weekend" class="card-img">
+                    <p>Race Weekend:</p>
+                    <p>-How a race weekend is structured.</p>
+                </a>
+
+                 <a class="card" href="./public/F1Quiz.html">
+                    <img src="../asset/Qualifying_3.jpeg" alt="Teams" class="card-img">
+                    <p>Quiz</p>
+                    <p>-Test Your knowledge on F1 with our interactive quiz</p>
+                </a>
+            </section>
         </body>
+
+
 
      <div class="bottomer">
       
