--- a/public/PartsofaFormulaOneCar.html
+++ b/public/PartsofaFormulaOneCar.html
@@ -64,27 +64,28 @@
         <img src="../asset/F1_Halo.jpeg" height="250" alt="F1 2026" title=" These devices both protect the driver's head from a heavy impact, and protect their neck and head from whiplash by locking them in a small range of motion" class = 'parts'>
         <p class = 'parts'>These two parts are some of the most important safety equipment possible for a driver incase of a crash. The Halo protects the head of the driver just in case of an object flying at high speed going into the cockpit, many deaths could've been prevented with the Halo, examples of this are Senna's and Tom Pryce's deaths where objects flew at their heads and broke their skulls. The HANS device meanwhile prevents backlash incase of a hard impact, like when Max Verstappen hit the wall at 51G, but got out unscathed because of the HANS device protecting his head and neck from breaking.</p>
         </div>
+        <hr>
 <section class="cards-grid" aria-label="Quick links">
 
-                <a class="card" href="./public/2026Regulations.html">
+                <a class="card" href="../public/2026Regulations.html">
                     <img src="../asset/F1 2026 car.jpg" alt="2026 Regulations" class="card-img">
                     <p>2026 Regulations:</p>
                     <p>-What changes are coming to F1 this year.</p>
                 </a>
 
-                <a class="card" href="./public/PartsofaFormulaOneCar.html">
+                <a class="card" href="../public/PartsofaFormulaOneCar.html">
                     <img src="../asset/F1_Halo.jpeg" alt="Parts of an F1 car" class="card-img">
                     <p>Parts of an F1 Car:</p>
                     <p>-Main components that make it all happen.</p>
                 </a>
 
-                <a class="card" href="./public/WhatHappensinaRaceWeekend.html">
+                <a class="card" href="../public/WhatHappensinaRaceWeekend.html">
                     <img src="../asset/FreePractice_3.jpeg" alt="Race Weekend" class="card-img">
                     <p>Race Weekend:</p>
                     <p>-How a race weekend is structured.</p>
                 </a>
 
-                 <a class="card" href="./public/F1Quiz.html">
+                 <a class="card" href="../public/F1Quiz.html">
                     <img src="../asset/Qualifying_3.jpeg" alt="Teams" class="card-img">
                     <p>Quiz</p>
                     <p>-Test Your knowledge on F1 with our interactive quiz</p>
