--- a/public/References.html
+++ b/public/References.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <link rel="stylesheet" href="../public/GeneralStyle.css">
  <link rel="stylesheet" href="../public/ReferencesStyleSheet.css">
- <link rel="stylesheet" href="public\indexStyleSheet.css">
+  <link rel="stylesheet" href="../public/indexStyleSheet.css">
     <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,7 +73,7 @@
     </ul>
     <hr>
 
-    <section class="cards-grid" aria-label="Quick links">
+     <section class="cards-grid" aria-label="Quick links">
 
                 <a class="card" href="../public/2026Regulations.html">
                     <img src="../asset/F1 2026 car.jpg" alt="2026 Regulations" class="card-img">
@@ -100,8 +100,6 @@
                 </a>
             </section>
         </body>
-
-
 
      <div class="bottomer">
       
