--- a/public/WhatHappensinaRaceWeekend.html
+++ b/public/WhatHappensinaRaceWeekend.html
@@ -4,7 +4,7 @@
 <head>
  <link rel="stylesheet" href="../public/GeneralStyle.css">
  <link rel="stylesheet" href="../public/RaceWeekStyleSheet.css">
- <link rel="stylesheet" href="public\indexStyleSheet.css">
+ <link rel="stylesheet" href="../public/indexStyleSheet.css">
 
     
         <meta charset="UTF-8">
@@ -68,7 +68,7 @@
     </div>
 
     <hr>
-<section class="cards-grid" aria-label="Quick links">
+     <section class="cards-grid" aria-label="Quick links">
 
                 <a class="card" href="../public/2026Regulations.html">
                     <img src="../asset/F1 2026 car.jpg" alt="2026 Regulations" class="card-img">
